--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "byteiq-browser",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A community-driven AI browser powered by Chromium kernel",
   "main": "src/main/main.js",
+  "build": {
+    "win": {
+      "target": "nsis",
+      "signAndEditExecutable": false
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
+  },
   "scripts": {
     "start": "electron .",
     "dev": "electron . --dev",
@@ -19,7 +29,8 @@
   "author": "Byteiq Community",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^28.0.0"
+    "electron": "^28.0.0",
+    "electron-builder": "^26.7.0"
   },
   "dependencies": {
     "electron-store": "^8.1.0"
