chore: setup code quality tools (ESLint, Prettier, Husky, Jest)
- Add ESLint configuration with code quality rules
- Add Prettier for automatic code formatting
- Setup Husky pre-commit hooks with lint-staged
- Configure Jest testing framework
- Add npm scripts for linting, formatting, and testing
- Add initial test cases

--- a/package.json
+++ b/package.json
@@ -17,7 +17,20 @@
     "start": "electron .",
     "dev": "electron . --dev",
     "build": "electron-builder",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/**/*.js",
+    "lint:fix": "eslint src/**/*.js --fix",
+    "format": "prettier --write \"src/**/*.js\"",
+    "format:check": "prettier --check \"src/**/*.js\"",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "src/**/*.js": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "keywords": [
     "browser",
@@ -29,8 +42,16 @@
   "author": "Byteiq Community",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "electron": "^28.0.0",
-    "electron-builder": "^26.7.0"
+    "electron-builder": "^26.7.0",
+    "eslint": "^10.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
+    "husky": "^9.1.7",
+    "jest": "^30.2.0",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.8.1"
   },
   "dependencies": {
     "electron-store": "^8.1.0"
